REGRESSION (r94887): Scrolling the HTML spec is more jerky now than it was (regression) https://bugs.webkit.org/show_bug.cgi?id=70857

Source/WebCore:

Revert r94887, because it regressed performance.

Rubber-stamped by Antti Koivisto.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::canShareStyleWithElement):
(WebCore::parentStylePreventsSharing):
* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::checkSelector):
* dom/Element.cpp:
(WebCore::Element::recalcStyle):
(WebCore::checkForSiblingStyleChanges):
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::RenderStyle):
* rendering/style/RenderStyle.h:
(WebCore::InheritedFlags::childrenAffectedByDirectAdjacentRules):
(WebCore::InheritedFlags::setChildrenAffectedByDirectAdjacentRules):

LayoutTests:

Rubber-stamped by Antti Koivisto.

* fast/css/adjacent-sibling-selector-expected.txt: Removed.
* fast/css/adjacent-sibling-selector.html: Removed.

Canonical link: https://commits.webkit.org/87143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98492 268f45cc-cd09-0410-ab3c-d52691b4dbfc