Source/WebCore/css/SelectorChecker.cpp
@@ -483,10 +483,10 @@ SelectorChecker::SelectorMatch SelectorChecker::checkSelector(CSSSelector* sel, 
         }
     case CSSSelector::DirectAdjacent:
         {
-            if (!m_isCollectingRulesOnly) {
-                RenderStyle* currentStyle = elementStyle ? elementStyle : e->renderStyle();
-                if (currentStyle)
-                    currentStyle->setAffectedByDirectAdjacentRules();
+            if (!m_isCollectingRulesOnly && e->parentNode() && e->parentNode()->isElementNode()) {
+                RenderStyle* parentStyle = elementStyle ? elementParentStyle : e->parentNode()->renderStyle();
+                if (parentStyle)
+                    parentStyle->setChildrenAffectedByDirectAdjacentRules();
             }
             Node* n = e->previousSibling();
             while (n && !n->isElementNode())
